# MiMHex

./: CMakeLists.txt
implementation/: board.cpp  board.h  board_dim.cpp  board_dim.h  mcts_node.cpp  mcts_node.h  mcts_tree.cpp  mcts_tree.h  params.cpp  params.h  protocol.cpp  switches.cpp  switches.h  time_manager.cpp  time_manager.h
main/: main.cpp
