CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
SET (CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS TRUE)
ENABLE_TESTING ()

PROJECT (MIMHEX)

SET (CMAKE_CXX_FLAGS "-ansi -W -Wall -Wextra -fomit-frame-pointer -O2")
SET (CMAKE_CXX_FLAGS_DEBUG "-DINSERT_ASSERTIONS -g")

ADD_SUBDIRECTORY (main)
ADD_SUBDIRECTORY (patterns)
ADD_SUBDIRECTORY (tests)
ADD_SUBDIRECTORY (benchmarks)
